# OlioOhjelmointiViikkotehtavat

./: .gitignore  Info
Viikko1/EkaCPP/: CMakeLists.txt  main.cpp
Viikko1/Viikkotehtava/viikkotehtava/: CMakeLists.txt
Viikko1/viikkotehtava/: main.cpp
Viikko2/viikkotehtava/: CMakeLists.txt  README  game.cpp  game.h  main.cpp
Viikko3/viikkotehtavat/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Viikko4/viikkotehtava/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Viikko5/: CMakeLists.txt  main.c  notifikaattori.cpp  seuraaja.cpp  seuraaja.h
Viikko5Uusi/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Viikko6/viikkotehtava/: CMakeLists.txt  main.cpp  student.cpp  student.h
Viikko7/Calculator/Calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Viikko7/Counter/: mainwindow.cpp  mainwindow.h  mainwindow.ui
viikko 8/Shakkikello/: mainwindow.cpp  mainwindow.h  mainwindow.ui
